# amber_developer_stack

./: LICENSE  README.md
alt_math_utilities/: CMakeLists.txt  package.xml
alt_math_utilities/test/: test_powfast.cpp
amber_developer_stack/: package.xml
common_assert/: CMakeLists.txt  package.xml
common_assert/include/common_assert/: common_assert.hpp
common_assert/test/: common_assert-test.cpp  test_common_assert.cpp
common_cmake/: package.xml
common_cmake/cmake/: common_cmake-setup.cmake  common_flags.cmake
common_cmake_test/: CMakeLists.txt  package.xml
common_scripts/: README.md  package.xml
common_scripts/scripts/: catkin_rename_package.sh  regex_extract.py  regex_rename.py  regex_sub.py  rossudo  text_swap.py
common_scripts/src/common_scripts/: text_processor.py
control_eigen_utilities/: package.xml
control_eigen_utilities/include/control_eigen_utilities/: limits.hpp
control_eigen_utilities/test/: test_control_eigen_utilities.cpp
control_utilities/: package.xml
control_utilities/include/control_utilities/: filters.hpp  limits.hpp
control_utilities/test/: test_control_utilities.cpp
eigen_utilities/: CMakeLists.txt  package.xml  run_tests.sh
eigen_utilities/include/eigen_utilities/: assert_error.hpp  assert_size.hpp  compare_utilities.hpp  container_utilities.hpp  interp_utilities.hpp  runtime_config.hpp
eigen_utilities/src/: runtime_config.cpp
eigen_utilities/test/: test_assert_size.cpp  test_compare_utilities.cpp  test_container_utilities.cpp  test_interp_utilities.cpp  test_runtime_config.cpp  test_runtime_config_clean_eigen.cpp  test_runtime_config_ndebug.cpp
gdb_utilities/: package.xml
logging_utilities/: package.xml
matlab_interface/: CMakeLists.txt  README.md  package.xml
matlab_interface/cmake/: matlab_interface-setup.cmake  toolchain-mex.cmake
matlab_interface/scripts/: matlab_console.sh
matlab_interface/src/: Args.cpp  Cell.cpp  Command.cpp  Convert.cpp  Interface.cpp  Struct.cpp  conversion.cpp
matlab_interface/test/: run_test.sh  test.cpp  test.m
matlab_utilities/: README.md  package.xml
matlab_utilities/matlab/: matlab_utilities_depends.m
matlab_utilities/test/: test_all.m  test_horzcat_all.m  test_ros.m  test_spatial_v2.m  test_struct_stuff.m  test_yaml.m
realtime_utilities/: package.xml
realtime_utilities/include/realtime_utilities/: timing.hpp
realtime_utilities/src/: timing.cpp
realtime_utilities/test/: test_timing.cpp
roslib_utilities/: CMakeLists.txt  package.xml
roslib_utilities/src/: ros_package_utilities.cpp
roslib_utilities/test/: roslib_utilities-test.cpp
stl_utilities/: package.xml
stl_utilities/test/: test_container_utilities.cpp
yaml_eigen_utilities/: CMakeLists.txt  LICENSE  package.xml
yaml_eigen_utilities/test/: test_yaml_eigen_utilities.cpp
yaml_utilities/: CMakeLists.txt  README.md  package.xml
yaml_utilities/src/: binary_utilities.cpp  yaml_utilities.cpp
yaml_utilities/test/: test_binary_utilities.cpp  test_yaml_utilities.cpp
(+38 files in other folders)
